css/main.scss
/* ... */
/** GENERATED HTML FIXES FOR DOCUMENTATION **/
div.bodywrapper{
	dl dt{
		font-family: $fontMonoBold;
		font-weight: normal;
		a.headerlink{
			opacity: 0;
			-webkit-transition: opacity .3s;
			-o-transition: opacity .3s;
			transition: opacity .3s;
			padding-left: 4px;
		}
		.sig-prename,
		.property span.pre{
			font-family: $fontMono;
		}
	}
	dl{
		p{
			margin-top: 4px;
			margin-bottom: 30px;
			padding-left: 0;
			font-style: normal;
		}
		dd{
			padding-left: 0;
		}
	}
	dl dd,
	em.sig-param{
		font-style: normal;
		.n{
			font-weight: normal;
			font-family: $fontMono;
		}
	}
	a.reference.internal{
		text-decoration: none;
	}
	dt.sig-object{
		background-color: whitesmoke;
		border-radius: 7px;
		padding: 2px 5px 2px 5px;
		display: inline-block;
		&:hover{
			a.headerlink{
				opacity: 1;
			}
		}
	}
}

body.tmguidelines{
	a{
		color: inherit;
	}
	p + h2{
		margin-top: 70px;
	}
}

.wrap.odbc101aduckthemedguidetoodbc #environment + .nostroke_table + table tr > td:first-child,
.wrap.odbc101aduckthemedguidetoodbc #connection + .nostroke_table + table tr > td:first-child,
.wrap.odbc101aduckthemedguidetoodbc #statement + .nostroke_table + table tr > td:first-child,
.wrap.odbc101aduckthemedguidetoodbc #descriptor + .nostroke_table + table tr > td:first-child{
	white-space: nowrap;
}

@import url(syntax_highlighting.css?457);
@import url(copy_button.css);
@import url(search.css?add4c80d);
@import url(home.css?add4c80d);

@media print {
	header, footer {
		display: none !important;
	}
}

